Fix for skill allignment on iphone

--- a/style/style.css
+++ b/style/style.css
@@ -536,7 +536,7 @@ section:nth-of-type(2) .up-arrow {
   margin: 15px 0;
 }
 section:nth-of-type(2) .skills-wrapper {
-  align-items: flex-start;
+  align-items: center;
   width: 100%;
 }
 section:nth-of-type(2) .skills-wrapper .me {
